--- a/css/styles.css
+++ b/css/styles.css
@@ -16,9 +16,9 @@ body {
   background-color: #1a1a1d;
 }
 
-.opening,
-.hero,
-.contact {
+#opening,
+#hero,
+#contact {
   width: 100%;
   height: 100vh;
   padding: 0 5%;
@@ -27,7 +27,7 @@ body {
   flex-wrap: wrap;
 }
 
-.opening {
+#opening {
   background-image: linear-gradient(rgba(12, 3, 51, 0.3), rgba(12, 3, 51, 0.3));
   justify-content: center;
   position: relative;
@@ -58,23 +58,23 @@ body {
   background-size: cover;
 }
 
-.hero {
+#hero {
   justify-content: space-between;
   padding: 0 3rem;
 }
 
-.hero .intro {
+#hero .intro {
   color: var(--font-color);
 }
 
-.hero .intro h1,
+#hero .intro h1,
 h2 {
   font-size: 1.5rem; /* 24px */
   line-height: 2rem; /* 32px */
   font-weight: 500;
 }
 
-.hero .intro p {
+#hero .intro p {
   font-size: 3rem; /* 48px */
   line-height: 1;
   font-weight: 600;
@@ -84,28 +84,29 @@ h2 {
   background-color: var(--font-color);
 }
 
-.hero img {
+#hero img {
   width: 30%;
   height: auto;
 }
 
-.contact div {
+#contact div {
   width: 25%;
-  height: 90vh;
+  height: auto;
   display: flex;
   justify-content: center;
   align-items: center;
   flex-direction: column;
   gap: 2rem;
+  cursor: pointer;
+}
+
+#contact div a {
+  text-decoration: none;
   color: var(--font-color);
 }
 
 i {
   scale: 4;
-}
-
-.contact div p {
-  display: block;
 }
 
 @media (min-aspect-ratio: 16/9) {
@@ -129,15 +130,19 @@ i {
     line-height: 1;
   }
 
-  .hero .intro h1,
+  #hero .intro h1,
   h2 {
     font-size: 3.75rem; /* 60px */
     line-height: 1;
   }
 
-  .hero .intro p {
+  #hero .intro p {
     font-size: 8rem; /* 128px */
     line-height: 1;
+  }
+  
+  i {
+    scale: 7;
   }
 }
 
@@ -148,20 +153,28 @@ i {
     line-height: 2.5rem; /* 40px */
   }
 
-  .hero .intro,
-  .hero .image {
+  #hero .intro {
     width: 100%;
   }
 
-  .hero .intro h1,
+  #hero img {
+    margin: 3rem auto;
+    width: 50%;
+  }
+
+  #hero .intro h1,
   h2 {
     font-size: 1.25rem; /* 20px */
     line-height: 1.75rem; /* 28px */
   }
 
-  .hero .intro p {
+  #hero .intro p {
     font-size: 2.25rem; /* 36px */
     line-height: 2.5rem; /* 40px */
+  }
+
+  i {
+    scale: 3;
   }
 }
 
@@ -172,19 +185,27 @@ i {
     line-height: 2rem; /* 32px */
   }
 
-  .hero .intro,
-  .hero .image {
+  #hero .intro {
     width: 100%;
   }
 
-  .hero .intro h1,
+  #hero img {
+    margin: 0 auto;
+    width: 80%;
+  }
+
+  #hero .intro h1,
   h2 {
     font-size: 1.125rem; /* 18px */
     line-height: 1.75rem; /* 28px */
   }
 
-  .hero .intro p {
+  #hero .intro p {
     font-size: 1.875rem; /* 30px */
     line-height: 2.25rem; /* 36px */
+  }
+
+  i {
+    scale: 2;
   }
 }
