--- a/css/styles.css
+++ b/css/styles.css
@@ -16,9 +16,7 @@ body {
   background-color: #1a1a1d;
 }
 
-#opening,
-#hero,
-#contact {
+section {
   width: 100%;
   height: 100vh;
   padding: 0 5%;
@@ -140,7 +138,7 @@ i {
     font-size: 8rem; /* 128px */
     line-height: 1;
   }
-  
+
   i {
     scale: 7;
   }
