--- a/css/styles.css
+++ b/css/styles.css
@@ -9,17 +9,97 @@
   margin: 0;
   padding: 0;
   box-sizing: border-box;
-  font-family: "Poppins", sans-serif;
   color: var(--font-color);
 }
 
 body {
   background-color: #1a1a1d;
+  font-family: "Poppins", sans-serif;
+}
+
+nav {
+  background-image: linear-gradient(rgba(12, 3, 51, 0.3), rgba(12, 3, 51, 0.3));
+  padding: 20px;
+  width: 100%;
+  display: flex;
+  justify-content: flex-start;
+  align-items: center;
+  border-radius: 3px;
+  box-shadow: 0 2px 5px rgba(0, 0, 0, 0.3);
+  transition: width 0.6s linear;
+}
+
+nav.active {
+  width: 100%;
+}
+
+ul {
+  display: flex;
+  list-style: none;
+  padding: 0;
+  margin: 0;
+  width: 0;
+  transition: width 0.6s linear;
+}
+
+nav.active ul {
+  width: 100%;
+}
+
+nav ul li {
+  transform: rotate(0deg);
+  opacity: 0;
+  transition: transfrom 0.6s linear, opacity 0.6s linear;
+}
+
+nav.active ul li {
+  opacity: 1;
+  transform: rotateY(360deg);
+}
+
+nav ul a {
+  position: relative;
+  text-decoration: none;
+  margin: 0 10px;
+}
+
+.icon {
+  background: transparent;
+  border: 0;
+  padding: 0;
+  position: relative;
+  height: 30px;
+  width: 30px;
+  outline: none;
+  cursor: pointer;
+}
+
+.icon .line {
+  background: var(--font-color);
+  height: 2px;
+  width: 20px;
+  position: absolute;
+  top: 10px;
+  left: 5px;
+  transition: transfrom 0.6s linear;
+}
+
+.icon .line2 {
+  top: auto;
+  bottom: 10px;
+}
+
+nav.active .icon .line1 {
+  transform: rotate(-765deg) translateY(5.5px);
+}
+
+nav.active .icon .line2 {
+  transform: rotate(765deg) translateY(-5.5px);
 }
 
 section {
   width: 100%;
-  height: 100vh;
+  min-height: 100vh;
   padding: 0 5%;
   display: flex;
   align-items: center;
@@ -84,7 +164,6 @@ h2 {
 }
 
 #project {
-  height: auto;
   margin-inline: auto;
 }
 
@@ -101,7 +180,7 @@ h2 {
 
 /* Sub-grid */
 .box {
-  border: 1ps solid #fff;
+  border: 1px solid #fff;
   border-radius: 6px;
   padding: 2rem;
   text-align: center;
