--- a/css/styles.css
+++ b/css/styles.css
@@ -148,7 +148,8 @@ h2 {
   font-weight: 500;
 }
 
-#hero .intro p {
+#hero .intro p,
+#project h1 {
   font-size: 3rem; /* 48px */
   line-height: 1;
   font-weight: 600;
@@ -165,6 +166,12 @@ h2 {
 
 #project {
   margin-inline: auto;
+  position: relative;
+}
+
+#project h1 {
+  position: absolute;
+  top: 0;
 }
 
 #project img {
@@ -235,7 +242,8 @@ i {
     line-height: 1;
   }
 
-  #hero .intro p {
+  #hero .intro p,
+  #project h1 {
     font-size: 8rem; /* 128px */
     line-height: 1;
   }
@@ -267,7 +275,8 @@ i {
     line-height: 1.75rem; /* 28px */
   }
 
-  #hero .intro p {
+  #hero .intro p,
+  #project h1 {
     font-size: 2.25rem; /* 36px */
     line-height: 2.5rem; /* 40px */
   }
@@ -299,7 +308,8 @@ i {
     line-height: 1.75rem; /* 28px */
   }
 
-  #hero .intro p {
+  #hero .intro p,
+  #project h1 {
     font-size: 1.875rem; /* 30px */
     line-height: 2.25rem; /* 36px */
   }
