--- a/css/styles.css
+++ b/css/styles.css
@@ -17,6 +17,8 @@ body {
   font-family: "Poppins", sans-serif;
 }
 
+/* Efek fade */
+
 nav {
   background-image: linear-gradient(rgba(12, 3, 51, 0.3), rgba(12, 3, 51, 0.3));
   padding: 20px;
