--- a/css/styles.css
+++ b/css/styles.css
@@ -159,9 +159,69 @@ h2 {
   background-color: var(--font-color);
 }
 
+.card {
+  position: relative;
+  width: 25rem;
+  height: 60vh;
+  background: var(--font-color);
+  box-shadow: 0 1px 5px rgba(0, 0, 0, 0.5);
+}
+
+.card::before,
+.card::after {
+  content: "";
+  position: absolute;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+  background: var(--font-color);
+  transition: 1s;
+  z-index: -1;
+}
+
+.card:hover::before {
+  transform: rotate(20deg);
+  box-shadow: 0 2px 20px rgba(0, 0, 0, 0.2);
+}
+
+.card:hover::after {
+  transform: rotate(10deg);
+  box-shadow: 0 2px 20px rgba(0, 0, 0, 0.2);
+}
+
+.imgBox {
+  position: absolute;
+  top: 10px;
+  left: 10px;
+  bottom: 10px;
+  right: 10px;
+  background: #1a1a1d;
+  transition: 1s;
+  z-index: 2;
+}
+
+.card:hover .imgBox {
+  bottom: 80px;
+}
+
+.details {
+  position: absolute;
+  left: 10px;
+  right: 10px;
+  bottom: 10px;
+  height: 60px;
+  text-align: center;
+  color: #1a1a1d;
+}
+
 #hero img {
-  width: 30%;
-  height: auto;
+  position: absolute;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+  object-fit: cover;
 }
 
 #project {
@@ -289,13 +349,17 @@ i {
     line-height: 2.5rem; /* 40px */
   }
 
+  #hero {
+    justify-content: center;
+  }
+
   #hero .intro {
     width: 100%;
   }
 
-  #hero img {
-    margin: 3rem auto;
+  .card {
     width: 50%;
+    height: 60vh;
   }
 
   #hero .intro h1,
@@ -326,9 +390,9 @@ i {
     width: 100%;
   }
 
-  #hero img {
-    margin: 0 auto;
-    width: 80%;
+  .card {
+    width: 100%;
+    height: 60vh;
   }
 
   #hero .intro h1,
