--- a/css/styles.css
+++ b/css/styles.css
@@ -165,6 +165,7 @@ h2 {
   height: 60vh;
   background: var(--font-color);
   box-shadow: 0 1px 5px rgba(0, 0, 0, 0.5);
+  margin-right: 1.7rem;
 }
 
 .card::before,
@@ -360,6 +361,7 @@ i {
   .card {
     width: 50%;
     height: 60vh;
+    margin-right: 0;
   }
 
   #hero .intro h1,
@@ -393,6 +395,7 @@ i {
   .card {
     width: 100%;
     height: 60vh;
+    margin-right: 0;
   }
 
   #hero .intro h1,
